[package]
name = "max17048"
version = "0.1.0"
authors = ["Scott Mabin <MabezDev@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.2"

[dev-dependencies]
cortex-m = "0.5.7"
panic-semihosting = "0.5.1"
cortex-m-semihosting = "0.3.1"
cortex-m-rt = "0.6.5"

[dev-dependencies.stm32l4xx-hal]
git = "https://github.com/mabezdev/stm32l4xx-hal"
features= ["rt", "stm32l4x2"]