[package]
name = "max17048"
version = "0.1.0"
authors = ["Scott Mabin <MabezDev@gmail.com>"]
description = "A I2C driver crate for the max17048/9 LiPo Fuel gauge IC"
keywords = ["no-std", "max17048", "fuel", "lipo", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/MabezDev/max17048"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*",
    ".vscode/",
    ".vscode/*",
]
edition = "2018"

[dependencies]
embedded-hal = "0.2.2"

[dev-dependencies]
cortex-m = "0.5.7"
panic-semihosting = "0.5.1"
cortex-m-semihosting = "0.3.1"
cortex-m-rt = "0.6.5"

[dev-dependencies.stm32l4xx-hal]
version = "0.3.2"
# git = "https://github.com/mabezdev/stm32l4xx-hal"
# path = "../stm32l4xx-hal"
features= ["rt", "stm32l4x2"]